// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AmountInput/> render() should render with currency symbol on left 1`] = `
<div
  class="container"
>
  <span
    class="wrapper group horizontal"
  >
    <span
      class="prefix"
    >
      $
    </span>
    <input
      class="input"
      id="amount"
      max="Infinity"
      min="0"
      required=""
      step="0.01"
      type="number"
      value="9.99"
    />
    <span
      class="controls group vertical"
    >
      <button
        aria-disabled="false"
        class="wrapper button wrapper small fill secondary small top"
        type="button"
      >
        <span
          class="content"
        >
          <i
            class="material-icons icon"
          >
            arrow_drop_up
          </i>
        </span>
      </button>
      <button
        aria-disabled="false"
        class="wrapper button wrapper small fill secondary small bottom"
        type="button"
      >
        <span
          class="content"
        >
          <i
            class="material-icons icon"
          >
            arrow_drop_down
          </i>
        </span>
      </button>
    </span>
  </span>
</div>
`;

exports[`<AmountInput/> render() should render with percentage symbol on right 1`] = `
<div
  class="container"
>
  <span
    class="wrapper group horizontal"
  >
    <input
      class="input isAlignedRight"
      id="amount"
      max="100"
      min="0"
      required=""
      step="0.01"
      type="number"
      value="25.00"
    />
    <span
      class="suffix"
    >
      %
    </span>
    <span
      class="controls group vertical"
    >
      <button
        aria-disabled="false"
        class="wrapper button wrapper small fill secondary small top"
        type="button"
      >
        <span
          class="content"
        >
          <i
            class="material-icons icon"
          >
            arrow_drop_up
          </i>
        </span>
      </button>
      <button
        aria-disabled="false"
        class="wrapper button wrapper small fill secondary small bottom"
        type="button"
      >
        <span
          class="content"
        >
          <i
            class="material-icons icon"
          >
            arrow_drop_down
          </i>
        </span>
      </button>
    </span>
  </span>
</div>
`;
